update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,6 +5,9 @@ contributor:
     agent_name: Wisa, Louis
     gutenberg_agent_id: '8138'
     url: http://www.gutenberg.org/2009/agents/8138
+covers:
+- cover_type: archival
+  image_path: 73603-h/images/cover.jpg
 creator:
   author:
     agent_name: Garis, Howard Roger
@@ -19,6 +22,8 @@ creator:
     - http://www.gutenberg.org/ebooks/author/32638
     - https://en.wikipedia.org/wiki/Howard_R._Garis
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73603#Uncle-Wiggily-and-Baby-Bunty
 gutenberg_issued: '2024-05-11'
 gutenberg_type: Text
 identifiers:
